--- a/frontend-task-client/package.json
+++ b/frontend-task-client/package.json
@@ -4,16 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "code-prettify": "^0.1.0",
+    "highlight.js": "^9.13.1",
     "node-sass": "^4.10.0",
     "parcel-bundler": "^1.10.3",
-    "parcel-plugin-clean-dist": "^0.0.6"
+    "parcel-plugin-clean-dist": "^0.0.6",
+    "prismjs": "^1.15.0",
+    "xml-formatter": "^1.0.1"
   },
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3"
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0"
   }
 }
