--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # dependencies
 /rest-client/node_modules
 /rest-server/node_modules
+
+/brief.md.txt
+/interface.png
+/response.json
+/response.xml
